--- a/.github/workflows/next-release.yml
+++ b/.github/workflows/next-release.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   Release:
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
     env:
       NODE_ENV: production
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: 16
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -59,98 +59,3 @@ jobs:
         run: |
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npx lerna publish prerelease  --yes --no-git-reset --preid next --dist-tag next
-
-      # - name: Get Releases Commit Message
-      #   uses: actions/github-script@v3
-      #   with:
-      #     github-token: ${{secrets.GITHUB_TOKEN}}
-      #     script: |
-      #       const branch = await github.repos.getBranch({
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         branch: "next"
-      #       })
-
-      #       const commitMessage = branch.data.commit.commit.message
-      #       const slackMessage = commitMessage.replace('chore(release): publish', '')
-      #         .replace(/\n/g, "\\n")
-      #         .replace(/\r/g, "\\r")
-      #         .replace(/\t/g, "\\t")
-      #         .replace(/\f/g, "\\f")
-
-      #       core.exportVariable("SLACK_MESSAGE", slackMessage)
-
-      # - name: Start Documentation Deployment
-      #   uses: bobheadxi/deployments@v0.4.3
-      #   id: deployment
-      #   with:
-      #     step: start
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     env: ${{env.DOCUMENTATION_PUBLISH_FOLDER}}
-      #     desc: ${{env.DOCUMENTATION_PUBLISH_FOLDER}}
-
-      # - name: Generate Documentation
-      #   run: |
-      #     EXCLUDE_TEST_STORIES=true npm run build-documentation
-
-      # - name: Checkout Documentation Repository
-      #   uses: actions/checkout@v2
-      #   with:
-      #     repository: ${{ env.DOCUMENTATION_PUBLISH_REPO }}
-      #     ref: ${{ env.DOCUMENTATION_PUBLISH_BRANCH }}
-      #     token: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
-      #     path: gh-docs
-      #     fetch-depth: 1
-
-      # - name: Remove Previous Documentation
-      #   run: |
-      #     rm -rf ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}/*
-
-      # - name: Copy New Documentation
-      #   run: |
-      #     mkdir -p ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}
-      #     cp -r dist/* ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}
-
-      # - name: Push Documentation
-      #   run: |
-      #     cd ${{ github.workspace }}/gh-docs
-      #     git config --global user.name 'github-actions[bot]'
-      #     git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-      #     git add -A ${DOCUMENTATION_PUBLISH_FOLDER}
-      #     git commit -m "${DOCUMENTATION_PUBLISH_MESSAGE}"
-      #     git push
-
-      # - name: Cleanup Folder
-      #   if: always()
-      #   run: |
-      #     rm -rf ${{ github.workspace }}/gh-docs
-
-      # - name: Update Deployment Status
-      #   uses: bobheadxi/deployments@v0.4.3
-      #   if: always()
-      #   with:
-      #     step: finish
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     status: ${{ job.status }}
-      #     deployment_id: ${{ steps.deployment.outputs.deployment_id }}
-      #     env_url: ${{env.DOCUMENTATION_URL}}
-
-      # - name: Notify release
-      #   uses: hbfernandes/slack-action@1.0
-      #   if: success()
-      #   env:
-      #     SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-      #   with:
-      #     args: |
-      #       {
-      #         "channel": "ui-kit",
-      #         "attachments": [
-      #           {
-      #             "mrkdwn_in": ["text"],
-      #             "author_name": "New UI-Kit artifacts are available",
-      #             "title": "More details https://github.com/${{github.repository}}/releases",
-      #             "text": "${{env.SLACK_MESSAGE}}",
-      #             "footer": "${{env.DOCUMENTATION_URL}}"
-      #           }
-      #         ]
-      #       }
