--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -15,6 +15,8 @@ jobs:
   CleanupDeployment:
     name: Cleanup Deployment
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Checkout
@@ -37,8 +39,7 @@ jobs:
 
       - name: Cleanup Folder
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/gh-docs
+        run: rm -rf ${{ github.workspace }}/gh-docs
 
       - name: mark environment as deactivated
         uses: bobheadxi/deployments@v0.4.3
