--- a/.github/workflows/run-full-tests-on-branch.yml
+++ b/.github/workflows/run-full-tests-on-branch.yml
@@ -22,7 +22,7 @@ on:
 jobs:
   Static-Checks:
     name: Licenses, Lint, Jest
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -32,8 +32,7 @@ jobs:
           node-version: "16"
 
       - name: Install
-        run: |
-          npm ci
+        run: npm ci
 
       - name: Bootstrap
         run: npm run bootstrap
@@ -68,8 +67,7 @@ jobs:
         run: npm run bootstrap
 
       - name: Build Storybook
-        run: |
-          V2_COMPAT_STORY_STORE=TRUE npm run build-documentation
+        run: V2_COMPAT_STORY_STORE=TRUE npm run build-documentation
 
       - name: Archive Storybook
         uses: actions/upload-artifact@v2
@@ -79,8 +77,7 @@ jobs:
 
       - name: Clean Folders
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/dist
+        run: rm -rf ${{ github.workspace }}/dist
 
   Build-Storybook-V3-Store:
     name: Build Storybook (v3 store)
@@ -95,8 +92,7 @@ jobs:
           node-version: "16"
 
       - name: Install
-        run: |
-          npm ci
+        run: npm ci
 
       - name: Bootstrap
         run: npm run bootstrap
@@ -116,17 +112,16 @@ jobs:
 
       - name: Clean Folders
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/dist
+        run: rm -rf ${{ github.workspace }}/dist
 
   A11Y-Tests:
     name: Accessibility Tests
     needs: [Build-Storybook-V3-Store]
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     services:
       storybook:
-        image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/nginx
+        image: nginx
         ports:
           - 9001:80
         volumes:
@@ -149,7 +144,7 @@ jobs:
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
-        uses: docker://dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/docker
+        uses: docker://docker
         with:
           args: docker restart storybook
 
@@ -165,17 +160,16 @@ jobs:
 
       - name: Clean Folders
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/dist
+        run: rm -rf ${{ github.workspace }}/dist
 
   Applitools:
     name: Applitools Storybook Visual Testing
     needs: [Build-Storybook-V2-Store]
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     services:
       storybook:
-        image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/nginx
+        image: nginx
         ports:
           - 9001:80
         volumes:
@@ -198,7 +192,7 @@ jobs:
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
-        uses: docker://dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/docker
+        uses: docker://docker
         with:
           args: docker restart storybook
 
@@ -223,21 +217,20 @@ jobs:
 
       - name: Clean Folders
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/dist
+        run: rm -rf ${{ github.workspace }}/dist
 
   Robot:
     name: Test Robot
     needs: [Build-Storybook-V3-Store]
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     strategy:
       fail-fast: false
       matrix:
         browser: [firefox, chrome]
     container:
-      image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/joaoeg/docker-robot-framework:0.1
-      options: --shm-size=6g --cpus 4 -u 2501
+      image: joaoeg/docker-robot-framework:0.1
+      options: --shm-size=6g -u 1001
       env:
         BROWSER: ${{ matrix.browser }}
         ROBOT_TESTS_DIR: ./automation/robot/storybook/core
@@ -247,7 +240,7 @@ jobs:
 
     services:
       storybook:
-        image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/nginx
+        image: nginx
         volumes:
           - ${{ github.workspace }}/dist:/usr/share/nginx/html
         options: >-
@@ -264,7 +257,7 @@ jobs:
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
-        uses: docker://dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/docker
+        uses: docker://docker
         with:
           args: docker restart storybook
 
