--- a/.github/workflows/security-checks.yml
+++ b/.github/workflows/security-checks.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   CodeDxScan:
     name: CodeDx Scan
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -70,7 +70,7 @@ jobs:
 
   BlackDuckScan:
     name: BlackDuck Scan
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
