--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -70,7 +70,12 @@ jobs:
         uses: docker://dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/docker
         with:
           args: docker restart storybook
-
+      
+      - name: Required Dependencies
+        run: |
+          sudo apt-get -y update 
+          sudo apt-get install -y libgconf-2-4 libatk1.0-0 libatk-bridge2.0-0 libgdk-pixbuf2.0-0 libgtk-3-0 libgbm-dev libnss3-dev libxss-dev
+          
       - name: Install automation/Applitools
         run: |
           cd ${{ github.workspace }}/automation/applitools
