--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Required Dependencies
         run: |
           sudo apt-get -y update 
-          sudo apt-get install -y libpangocairo-1.0-0 libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxi6 libxtst6 libnss3 libcups2 libxss1 libxrandr2 libgconf2-4 libasound2 libatk1.0-0 libgtk-3-0
+          sudo apt-get install -y libpangocairo-1.0-0 libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxi6 libxtst6 libnss3 libcups2 libxss1 libxrandr2 libasound2 libatk1.0-0 libgtk-3-0
           sudo apt-get install -y libgbm-dev
       
       - name: Install automation/Applitools
