--- a/.github/workflows/robot.yml
+++ b/.github/workflows/robot.yml
@@ -90,6 +90,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
@@ -100,7 +104,7 @@ jobs:
         uses: docker://dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/docker
         with:
           args: docker restart storybook
-
+      
       - name: Run Robot
         run: ./.github/robot-docker/run-tests-in-virtual-screen-with-rerun.sh
 
