--- a/.github/workflows/robot.yml
+++ b/.github/workflows/robot.yml
@@ -84,8 +84,8 @@ jobs:
           --name storybook
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      # - name: Checkout
+      #   uses: actions/checkout@v2
 
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
